--- a/public/index.html
+++ b/public/index.html
@@ -2,27 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SocketServer</title>
 </head>
 <body>
     <h1>Acceso denegado</h1>
-    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+
+    <script src="socket.io/socket.io.js"></script>
+
     <script>
         var socket = io();
-        socket.on('connect',function(){
-            console.log('conectado al servidor');
-        });
-        socket.on('disconnect',function(){
-            console.log('Se ha perdido la coneccion');
+
+        socket.on('connect', function() {
+            console.log('Conectado al servidor')
         });
 
-        socket.emit('mensaje',{nombre:'Emanuel'});
-
-        socket.on('mensaje',function(payload){
-            console.log("escuchando",payload)
+        socket.on('disconnect', function() {
+            console.log('Perdimos comunicación con el servidor');
         });
+
+
+        socket.emit('mensaje', { nombre: 'Fernando' } );
+
+        socket.on('nuevo-mensaje', function( payload ){
+            console.log('Escuhando:', payload );
+        });
+
+        socket.on('active-bands', function( bands ){
+            console.clear();
+            console.table( bands );
+        });
+
+
+
+
     </script>
+
 </body>
 </html>
